# ROSHouseDrivingAndPickingItems

./: README.md  opis_wykonania_projektu.txt
src/stero_mobile/: CMakeLists.txt  korytarz5.yaml  mieszkanie3.yaml  package.xml
src/stero_mobile/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  local_planner_params.yaml
src/stero_mobile/launch/: lab3_corridor.launch  lab3_house.launch  tiago_simple.launch
src/stero_mobile/rviz/: simple.rviz  simple2.rviz
src/stero_mobile/src/: main.py  run.cpp  spawn_objects.py  test_gripper.py
src/stero_mobile/worlds/: korytarz5.world  mieszkanie3.world
